CS59_Intellij/tests/invalid/allcapserror.dsl
/* invalid due to case mismatch */
WRITE "Hello World".